--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-base58"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Nick Hamann <nick@wabbo.org>"]
 license = "MIT/Apache-2.0"
 homepage = "https://github.com/nham/rust-base58"
@@ -11,4 +11,6 @@ Simple library for converting to and from base-58 strings.
 
 [dependencies]
 num = "*"
+
+[dev-dependencies]
 rand = "*"
