--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ Simple library for converting to and from base-58 strings.
 
 [dependencies]
 num = "*"
+sha2 = "0.7.1"
 
 [dev-dependencies]
 rand = "*"
